--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   background: #f1f1f1; height: 410px; margin-top: 70px; width: 340px;
 "><br>
       <h3 style="font-weight: 600;">GAYATHRI VEMULA</h3>
-      <h4 style="color:#013220; font-weight: 400; ">Tax Consultant</h4><br>
+      <h4 style="color:#013220; font-weight: 400; ">Financial Analyst</h4><br>
 
       <h5 style="color: #013220; font-weight: 600;">Email: </h5><p> gaya3vemula@gmail.com</p>
     
@@ -92,7 +92,7 @@
     <div class="col-sm-4 other ban" style="
   background: #f1f1f1;margin-top: 70px;
 ">
-      <img src="img/p2.jpg" class="img-responsive " height="500" style="margin-left: 15px;">
+      <img src="img/p2.JPG" class="img-responsive " height="500" style="margin-left: 15px;">
     </div>
     	<div class="col-sm-2"></div>
   </div>
@@ -151,9 +151,9 @@
     <div class="row">
     	  <div class="col-lg-6"  ></div>
       <div class="col-lg-6" data-aos="fade-right" data-aos-duration="2000">
-          <h3 style="font-weight: 500;">DELOITTE </h3>
+          <h3 style="font-weight: 500;">DELOITTE USI </h3>
               <div class="date">    <p style=" color: linear-gradient(#799F0C, #ACBB78);" > 25th Jun'18 – 18th Oct'19</p></div>
-              <h4 style="font-weight: 500;">Tax Consultant USI ( Financial Statements
+              <h4 style="font-weight: 500;">Tax Consultant ( Financial Statements
 Reviewer)
   </h4>
               <p>
