--- a/index.html
+++ b/index.html
@@ -151,9 +151,10 @@
     <div class="row">
     	  <div class="col-lg-6"  ></div>
       <div class="col-lg-6" data-aos="fade-right" data-aos-duration="2000">
-          <h3 style="font-weight: 500;">DELOITTE USI </h3>
-              <div class="date">    <p style=" color: linear-gradient(#799F0C, #ACBB78);" > 25th Jun'18 – 18th Oct'19</p></div>
-              <h4 style="font-weight: 500;">Tax Consultant ( Financial Statements
+          <h3 style="font-weight: 500;">DELOITTE </h3>
+              <div class="date">    <p   style="color: #799F0C;" > 
+              25th Jun'18 – 18th Oct'19</p></div>
+              <h4 style="font-weight: 500;">Tax Consultant USI ( Financial Statements
 Reviewer)
   </h4>
               <p>
@@ -171,7 +172,7 @@ I have worked in Reviews process, wherein statutory accounts of various clients 
       <div class="col-lg-6"  data-aos="fade-left" data-aos-duration="2000">
           <h3 style="font-weight: 500;"> SHARP ELECTRONICS </h3>
               <div class="date">
-                <p  style=" color: linear-gradient(#799F0C, #ACBB78);">10th April '17 – 10th June'17</p>
+                <p    style="color: #799F0C;">10th April '17 – 10th June'17</p>
               </div>
               <h4 style="font-weight: 500;">Market Research Analyst Intern</h4>
               <p>I have worked as a marketing research analyst wherein, we identified potential customers for the product ‘Air Purifier’ and their applications in the market. Further, we analyzed the significance and necessity of its existence in the potential industries.  </p>
@@ -187,7 +188,7 @@ I have worked in Reviews process, wherein statutory accounts of various clients 
       <div class="col-lg-6"  data-aos="fade-left" data-aos-duration="2000">
           <h3 style="font-weight: 500;">JAIDEV.K.ASSOCIATES </h3>
               <div class="date">
-                <p    style="color: #799F0C;">1st Jan'16 – 31th Mar'16)</p>
+                <p    style="color: #799F0C;">1st Jan'16 – 31th Mar'16</p>
               </div>
               <h4 style="font-weight: 500;">Paid Assistant</h4>
               <p>
@@ -217,7 +218,7 @@ I have worked in Reviews process, wherein statutory accounts of various clients 
 
 MBA (Finance) 
           </h4>
-              <p  style=" color: linear-gradient(#799F0C, #ACBB78);">2016 - 2018</p>
+              <p    style="color: #799F0C;">2016 - 2018</p>
            </div>
           </div>
         </div>
@@ -227,7 +228,7 @@ MBA (Finance)
             <div class="card-body">
               <h3 class="card-title" style="font-weight: 500; ">Sree Ram Degree College, Hyderabad</h3>
               <h4 class="card-text">Bachelor of Commerce </h4>
-              <p  style=" color: linear-gradient(#799F0C, #ACBB78);">2012 - 2015</p>
+              <p    style="color: #799F0C;">2012 - 2015</p>
             </div>
           </div>
         </div>
