--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
     <div class="row">
     	  <div class="col-lg-6"  ></div>
       <div class="col-lg-6" data-aos="fade-right" data-aos-duration="2000">
-          <h3 style="font-weight: 500;">DELOITTE </h3>
+          <h3 style="font-weight: 500;">DELOITTE USI </h3>
               <div class="date">    <p   style="color: #799F0C;" > 
               25th Jun'18 – 18th Oct'19</p></div>
-              <h4 style="font-weight: 500;">Tax Consultant USI ( Financial Statements
+              <h4 style="font-weight: 500;">Tax Consultant  ( Financial Statements
 Reviewer)
   </h4>
               <p>
