--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>GAYATHRI VEMULA | Portfolio</title>
+    <title>Vemula Gayathri | Portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700%7CRoboto%7CJosefin+Sans:100,300,400,500" rel="stylesheet" type="text/css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
@@ -279,7 +279,7 @@ MBA (Finance)
       <div class="container">
         <h2 class="sec-title"  style="color: #799F0C;">HIRE ME</h2>
           <p><span class="glyphicon glyphicon-envelope">
-            </span><a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=saikiranreddygangidi@gmail.com" style="color:black;text-decoration: none;" target="_blank"> gaya3vemula@gmail.com</a></p>
+            </span><a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=gaya3vemula@gmail.com" style="color:black;text-decoration: none;" target="_blank"> gaya3vemula@gmail.com</a></p>
             <p> <span class="glyphicon glyphicon-earphone"></span> +91 90307 09171</p>
 
           </p>
