--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar" style="background:linear-gradient(#799F0C, #ACBB78);"></span>
-                    <span class="icon-bar" style="background:linear-gradient(#799F0C, #ACBB78);"></span>
+                    <span class="icon-bar" style="background:linear-gradient(#799F0C, #ACBB78); width:50%;margin-left: 10px;"></span>
                     <span class="icon-bar" style="background:linear-gradient(#799F0C, #ACBB78);"></span>
                 </button>
                
